fix `sbt scripted` errors when change `organization` setting in build.sbt